Window size and scrolling

--- a/part-2-browser-document-events-interfaces/document/resume/window-sizes-and-scrolling.html
+++ b/part-2-browser-document-events-interfaces/document/resume/window-sizes-and-scrolling.html
@@ -5,6 +5,14 @@
     onclick="handleClick()"
   >
     <h3>Forbid the scrolling</h3>
+    <p>
+      <i>
+        <a
+          href="https://www.youtube.com/watch?v=eg-uYk4XDyQ&list=RDGdC78HMAt_w&index=23"
+          >https://www.youtube.com/watch?v=eg-uYk4XDyQ&list=RDGdC78HMAt_w&index=23</a
+        >
+      </i>
+    </p>
     <button
       type="button"
       onclick="handleScrollToBottom()"
