--- a/part-2-browser-document-events-interfaces/document/resume/coordinates.html
+++ b/part-2-browser-document-events-interfaces/document/resume/coordinates.html
@@ -60,6 +60,8 @@
       console.log(coords.width, example.offsetWidth);
       console.log(coords.height, example.offsetHeight);
       console.log(coords.x, coords.y);
+      console.log(example.offsetLeft, example.offsetTop);
+      console.log(coords.right, example.offsetWidth + example.offsetLeft);
     </script>
   </body>
 </html>
