--- a/part-2-browser-document-events-interfaces/document/resume/coordinates.html
+++ b/part-2-browser-document-events-interfaces/document/resume/coordinates.html
@@ -60,6 +60,8 @@
       console.log(coords.y, coords.top);
       console.log(coords.width);
       console.log(coords.height);
+      console.log(coords.right, coords.x + coords.width);
+      console.log(coords.bottom, coords.y + coords.height);
     </script>
 
     <!-- <script>
