--- a/part-2-browser-document-events-interfaces/document/resume/coordinates.html
+++ b/part-2-browser-document-events-interfaces/document/resume/coordinates.html
@@ -15,6 +15,7 @@
         position: absolute;
         top: 20px;
         left: 20px;
+        white-space: nowrap;
       }
     </style>
   </head>
@@ -62,7 +63,8 @@
 
       function handleScroll() {
         const coords = h3.getBoundingClientRect();
-        console.log(coords.top, coords.y);
+        // console.log(coords.top, coords.y);
+        console.log(coords.left, coords.x);
       }
     </script>
 
