--- a/part-2-browser-document-events-interfaces/document/resume/coordinates.html
+++ b/part-2-browser-document-events-interfaces/document/resume/coordinates.html
@@ -15,7 +15,7 @@
         position: absolute;
         top: 20px;
         left: 20px;
-        white-space: nowrap;
+        /* white-space: nowrap; */
       }
     </style>
   </head>
@@ -66,7 +66,9 @@
         // console.log(coords.top, coords.y);
         // console.log(coords.bottom);
         // console.log(coords.left, coords.x);
-        console.log(coords.right);
+        // console.log(coords.right);
+
+        console.log(coords.height);
       }
     </script>
 
