--- a/part-2-browser-document-events-interfaces/document/resume/coordinates.html
+++ b/part-2-browser-document-events-interfaces/document/resume/coordinates.html
@@ -69,6 +69,7 @@
         // console.log(coords.right);
 
         console.log(coords.height);
+        console.log(coords.width);
       }
     </script>
 
