--- a/part-2-browser-document-events-interfaces/document/resume/coordinates.html
+++ b/part-2-browser-document-events-interfaces/document/resume/coordinates.html
@@ -65,6 +65,11 @@
 
       console.log(elem);
       console.log(elems);
+
+      console.log(document.elementFromPoint(-10, -10));
+      console.log(document.elementFromPoint(-10, centerY));
+      console.log(document.elementFromPoint(centerX, -10));
+      console.log(document.elementFromPoint(1e5, 1e5));
     </script>
 
     <!-- <script>
