--- a/part-2-browser-document-events-interfaces/document/resume/coordinates.html
+++ b/part-2-browser-document-events-interfaces/document/resume/coordinates.html
@@ -81,7 +81,7 @@
 
       document.addEventListener("click", function () {
         const elem = document.elementFromPoint(position.x, position.y);
-        console.log(elem);
+        elem.style.backgroundColor = "pink";
       });
     </script>
 
