--- a/part-2-browser-document-events-interfaces/document/resume/coordinates.html
+++ b/part-2-browser-document-events-interfaces/document/resume/coordinates.html
@@ -82,6 +82,9 @@
       document.addEventListener("click", function () {
         const elem = document.elementFromPoint(position.x, position.y);
         elem.style.backgroundColor = "pink";
+        setTimeout(function () {
+          elem.style.backgroundColor = "";
+        }, 500);
       });
     </script>
 
