--- a/part-2-browser-document-events-interfaces/document/resume/coordinates.html
+++ b/part-2-browser-document-events-interfaces/document/resume/coordinates.html
@@ -95,15 +95,12 @@
       published as ISO/IEC 16262:2002 in June 2002.
     </p>
 
-    <p>
-      The third edition of the Standard introduced powerful regular expressions,
-      better string handling, new control statements, try/catch exception
-      handling, tighter definition of errors, formatting for numeric output and
-      minor changes in anticipation of forthcoming internationalisation
-      facilities and future language growth. The third edition of the ECMAScript
-      standard was adopted by the Ecma General Assembly of December 1999 and
-      published as ISO/IEC 16262:2002 in June 2002.
-    </p>
+    <button
+      type="button"
+      onclick="showMessage(this)"
+    >
+      Show message
+    </button>
 
     <p>
       The third edition of the Standard introduced powerful regular expressions,
@@ -115,15 +112,12 @@
       published as ISO/IEC 16262:2002 in June 2002.
     </p>
 
-    <p>
-      The third edition of the Standard introduced powerful regular expressions,
-      better string handling, new control statements, try/catch exception
-      handling, tighter definition of errors, formatting for numeric output and
-      minor changes in anticipation of forthcoming internationalisation
-      facilities and future language growth. The third edition of the ECMAScript
-      standard was adopted by the Ecma General Assembly of December 1999 and
-      published as ISO/IEC 16262:2002 in June 2002.
-    </p>
+    <button
+      type="button"
+      onclick="showMessage(this)"
+    >
+      Show message
+    </button>
 
     <p>
       The third edition of the Standard introduced powerful regular expressions,
@@ -135,6 +129,13 @@
       published as ISO/IEC 16262:2002 in June 2002.
     </p>
 
+    <button
+      type="button"
+      onclick="showMessage(this)"
+    >
+      Show message
+    </button>
+
     <p>
       The third edition of the Standard introduced powerful regular expressions,
       better string handling, new control statements, try/catch exception
@@ -144,6 +145,47 @@
       standard was adopted by the Ecma General Assembly of December 1999 and
       published as ISO/IEC 16262:2002 in June 2002.
     </p>
+
+    <button
+      type="button"
+      onclick="showMessage(this)"
+    >
+      Show message
+    </button>
+
+    <p>
+      The third edition of the Standard introduced powerful regular expressions,
+      better string handling, new control statements, try/catch exception
+      handling, tighter definition of errors, formatting for numeric output and
+      minor changes in anticipation of forthcoming internationalisation
+      facilities and future language growth. The third edition of the ECMAScript
+      standard was adopted by the Ecma General Assembly of December 1999 and
+      published as ISO/IEC 16262:2002 in June 2002.
+    </p>
+
+    <button
+      type="button"
+      onclick="showMessage(this)"
+    >
+      Show message
+    </button>
+
+    <p>
+      The third edition of the Standard introduced powerful regular expressions,
+      better string handling, new control statements, try/catch exception
+      handling, tighter definition of errors, formatting for numeric output and
+      minor changes in anticipation of forthcoming internationalisation
+      facilities and future language growth. The third edition of the ECMAScript
+      standard was adopted by the Ecma General Assembly of December 1999 and
+      published as ISO/IEC 16262:2002 in June 2002.
+    </p>
+
+    <button
+      type="button"
+      onclick="showMessage(this)"
+    >
+      Show message
+    </button>
 
     <p>
       The third edition of the Standard introduced powerful regular expressions,
