--- a/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
@@ -1,6 +1,37 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      body {
+        padding: 20px 0 0 20px;
+        cursor: pointer;
+        background-color: lightslategray;
+      }
+
+      #field {
+        width: 200px;
+        height: 150px;
+        background-color: #00ff00;
+        overflow: hidden;
+      }
+    </style>
+  </head>
   <body>
+    Click anywhere to get window coordinates.
+    <br />
+    That's for testing, to check the result you get by JavaScript.
+    <br />
+    <div id="coords">(click coordinates show up here)</div>
+
+    <div id="field">
+      . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+      . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+      . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+      . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+      . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+      . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+      .
+    </div>
     <script>
       console.log("ola");
     </script>
