--- a/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
@@ -5,7 +5,7 @@
       body {
         padding: 20px 0 0 20px;
         cursor: pointer;
-        background-color: lightslategray;
+        background-color: lightblue;
       }
 
       #field {
@@ -13,6 +13,11 @@
         height: 150px;
         background-color: #00ff00;
         overflow: hidden;
+        border-top: 10px solid black;
+        border-right: 10px solid gray;
+        border-bottom: 10px solid gray;
+        border-left: 10px solid black;
+        font: 10px/1.2 monospace;
       }
     </style>
   </head>
