--- a/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
@@ -19,6 +19,16 @@
         border-left: 10px solid black;
         font: 10px/1.2 monospace;
       }
+
+      .triangle-right {
+        width: 0;
+        height: 0;
+        position: relative;
+        border-top: 6px solid transparent;
+        border-bottom: 6px solid transparent;
+        border-left: 20px solid red;
+        font: 12px/1 monospace;
+      }
     </style>
   </head>
   <body>
@@ -37,6 +47,9 @@
       . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
       .
     </div>
+
+    <div class="triangle-right">1</div>
+
     <script>
       console.log("ola");
     </script>
