--- a/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
@@ -28,6 +28,7 @@
         border-bottom: 6px solid transparent;
         border-left: 20px solid red;
         font: 12px/1 monospace;
+        text-indent: -20px;
       }
     </style>
   </head>
@@ -48,7 +49,12 @@
       .
     </div>
 
-    <div class="triangle-right">1</div>
+    <div
+      class="triangle-right"
+      style="left: -20px; top: -176px"
+    >
+      1
+    </div>
 
     <script>
       console.log("ola");
