--- a/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
@@ -55,6 +55,12 @@
     >
       1
     </div>
+    <div
+      class="triangle-right"
+      style="left: -10px; top: -178px"
+    >
+      3
+    </div>
 
     <script>
       console.log("ola");
