--- a/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
@@ -62,6 +62,13 @@
       3
     </div>
 
+    <div
+      class="triangle-right"
+      style="left: 190px; top: -40px"
+    >
+      4
+    </div>
+
     <script>
       console.log("ola");
     </script>
