--- a/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
@@ -68,6 +68,12 @@
     >
       4
     </div>
+    <div
+      class="triangle-right"
+      style="left: 200px; top: -42px"
+    >
+      2
+    </div>
 
     <script>
       console.log("ola");
