--- a/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
@@ -77,6 +77,10 @@
 
     <script>
       console.log("ola");
+      const coords = document.querySelector("#coords");
+      document.addEventListener("click", function (e) {
+        coords.innerHTML = e.clientX + ":" + e.clientY;
+      });
     </script>
   </body>
 </html>
