--- a/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
@@ -86,6 +86,11 @@
 
       console.log(fieldCoords.left, fieldCoords.top);
       console.log(fieldCoords.right, fieldCoords.bottom);
+
+      console.log(
+        fieldCoords.x + field.clientLeft,
+        fieldCoords.y + field.clientTop
+      );
     </script>
   </body>
 </html>
